Improve checkbox alignment and fix issues related to row selection
Fixes checkbox alignment in datatable headers and resets checkboxes after data refresh.

--- a/force-app/main/default/lwc/assignmentDataTable/assignmentDataTable.css
+++ b/force-app/main/default/lwc/assignmentDataTable/assignmentDataTable.css
@@ -52,7 +52,8 @@
 }
 
 /* Position the checkbox properly */
-.row-number .slds-checkbox {
+.row-number .slds-checkbox, 
+.slds-th__action .slds-checkbox {
     display: flex;
     align-items: center;
     justify-content: center;
